# pybind11_log

./: CMakeLists.txt
src/: pybind11_log.cpp  pybind11_log.h
tests/: pybind11_log_test.cpp
